--- a/src/restaurantmenu/templates/items.template.html
+++ b/src/restaurantmenu/templates/items.template.html
@@ -1,5 +1,5 @@
 <a ui-sref="home">Home</a> &lt; <span>Item Details</span>
 
-<h3>Premade List with Absolutely No Cookies in it</h3>
+<h3>Item Details</h3>
 <items item="itemDetail.item">
 </items>
