--- a/src/restaurantmenu/templates/categories.template.html
+++ b/src/restaurantmenu/templates/categories.template.html
@@ -1,5 +1,5 @@
 <a ui-sref="home">Home</a> &lt; <span>Category List</span>
 
-<h3>Premade List with Absolutely No Cookies in it</h3>
+<h3>List of categories</h3>
 <categories category="mainList.category">
 </categories>
